<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="4000dp">
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffa2ffe3">-->
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/changeLangBar"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:id="@+id/changeLang"
            android:text="@string/changeLang"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:id="@+id/select_station"
            android:text="@string/selectStation"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/changeLangBar"
        android:id="@+id/search_Bar">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_input"
            android:layout_weight="8" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchBouton"
            android:id="@+id/search_bouton"
            android:clickable="true" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locateBouton"
            android:id="@+id/locate_bouton"
            android:clickable="true" />

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:weightSum="1"
        android:layout_below="@+id/search_Bar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >



        <TextView
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:gravity="center_horizontal"
            android:id="@+id/is_open"
            android:textSize="30dp"
            android:layout_below="@+id/temp_Img"/>

        <ProgressBar
            android:id="@+id/pBAsync"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_above="@+id/is_open"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/temp_img"
            android:background="@drawable/cloudy" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:id="@+id/linearLayout2"
        android:layout_below="@id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="#1834EB">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ff0cebd2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/matin"
                    android:id="@+id/text_matin"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/temp_matin"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ff0cebd2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aprem"
                    android:id="@+id/text_aprem"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/temp_aprem"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:background="#EB18B3"
            android:layout_weight="0.28">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ff0ac4ff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vitVent"
                    android:id="@+id/text_vente"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/vit_vente"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FF0AC4FF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nivNeige"
                    android:id="@+id/text_neige"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/niv_neige"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
</LinearLayout>
</ScrollView>

